# qaczar

./: .gitignore  LICENSE  db.sqlite  etome.css  herpetarium.py  p.sqlite  pyproject.toml  qaczar copy.py  qaczar.css  qaczar.html  qaczar.py  qaczar.sqlite3  requirements.txt  snake.py  u.sqlite
.server/: about  app_features  debugger.html  hello_world  hello_world.html  hello_world.qaczar.html  hello_world@qaczar.html  index.html  iso8601.qaczar.html  qaczar.ascii_banner.html  qaczar.collect_contact.html  qaczar.dedent.html  qaczar.emit.html  qaczar.extract_api.html  qaczar.function_index.html  qaczar.hello_world.html  qaczar.html  qaczar.iso8601.html  qaczar.list_dir.html  qaczar.process_html.html  qaczar.process_py.html  qaczar.py  qaczar.read_file.html  qaczar.seed_application.html  qaczar.write_file.html  qaczaswwswr.html  scratchpad  scratchpad.html  site_footer.html  site_main.html  site_nav.html  welcome.html
.server/powertome/: powertome.html
.server/qaczar/: hello_world  hello_world.html
.server/qaczar.com/: hello_world.html  index.html
.server/shop/: shop.html
.ssl/: cert.pem  key.pem
.worker/: welcome.html
powertome/: powertome.html
qaczar/: __init__.py  __main__.py  builder.py  cli.py  logger.py  qaczar.py  server.py  utils.py
qaczar.com/: site.toml  style.css
qaczar.com/articles/: welcome.md
qaczar.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
qaczar/qaczar.egg-info/: PKG-INFO  SOURCES.txt
root/: TODO.md  md_notes.canvas  pypi_upload.canvas  self_check.canvas  smoke_test.canvas
shop/: shop.html
(+68 files in other folders)
